--- a/alumni/package.json
+++ b/alumni/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.8.4",
     "jquery": "^3.7.1",
     "react": "^19.1.0",
+    "react-csv": "^2.2.2",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
